# FTP-Server

./: CMakeLists.txt  README.md  server.c  server_lib.c  server_lib.h
.github/workflows/: cmake.yml
auth_files/: file_login.txt  file_password.txt
